# examples

./: BUILD  MODULE.bazel  README.md
examples/cpp/: BUILD  main.cpp  test.cpp
examples/cpp/company/: BUILD  company.cpp
examples/cpp/company/includes/: company.h
examples/cpp/department/: BUILD  department.cpp
examples/cpp/department/includes/: department.h
